--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -21,7 +21,8 @@
     "@lexical/react": "^0.33.0",
     "@lexical/utils": "^0.33.0",
     "fast-equals": "^5.2.2",
-    "lexical": "^0.33.0"
+    "lexical": "^0.33.0",
+    "quill-delta": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
