--- a/package.json
+++ b/package.json
@@ -8,52 +8,52 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@lexical/eslint-plugin": "^0.33.0",
-    "@nx/devkit": "19.8.14",
-    "@nx/eslint": "19.8.14",
-    "@nx/eslint-plugin": "19.8.14",
-    "@nx/jest": "19.8.14",
-    "@nx/js": "19.8.14",
-    "@nx/plugin": "19.8.14",
-    "@nx/react": "19.8.14",
-    "@nx/vite": "19.8.14",
-    "@nx/web": "19.8.14",
+    "@lexical/eslint-plugin": "^0.33.1",
+    "@nx/devkit": "21.2.3",
+    "@nx/eslint": "21.2.3",
+    "@nx/eslint-plugin": "21.2.3",
+    "@nx/jest": "21.2.3",
+    "@nx/js": "21.2.3",
+    "@nx/plugin": "21.2.3",
+    "@nx/react": "21.2.3",
+    "@nx/vite": "21.2.3",
+    "@nx/web": "21.2.3",
     "@swc-node/register": "~1.10.10",
-    "@swc/core": "^1.11.21",
+    "@swc/core": "^1.12.14",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.17.22",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "@vitest/ui": "^2.1.9",
-    "axios": "^1.8.4",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.14",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "@vitejs/plugin-react-swc": "^3.10.2",
+    "@vitest/ui": "^3.2.4",
+    "axios": "^1.10.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.25.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "jsdom": "~26.1.0",
-    "lint-staged": "^15.5.1",
-    "nx": "19.8.14",
+    "lint-staged": "^16.1.2",
+    "nx": "21.2.3",
     "nx-cloud": "^19.1.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "ts-jest": "^29.3.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
-    "typescript": "~5.5.4",
-    "vite": "^5.4.14",
-    "vite-plugin-dts": "4.5.3",
-    "vitest": "^2.1.9",
+    "typescript": "~5.8.3",
+    "vite": "^7.0.4",
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^3.2.4",
     "yalc": "1.0.0-pre.53"
   },
   "pnpm": {
