--- a/package.json
+++ b/package.json
@@ -51,21 +51,13 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "typescript": "~5.8.3",
-    "vite": "^7.0.4",
-    "vite-plugin-dts": "^4.5.4",
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "4.5.3",
     "vitest": "^3.2.4",
     "yalc": "1.0.0-pre.53"
   },
-  "pnpm": {
-    "overrides": {
-      "undici@>=6.0.0 <6.21.1": ">=6.21.1",
-      "path-to-regexp@<0.1.12": ">=0.1.12",
-      "koa@>=2.0.0 <2.15.4": ">=2.15.4",
-      "esbuild@<=0.24.2": ">=0.25.0"
-    }
-  },
   "volta": {
     "node": "20.18.0",
-    "pnpm": "10.8.1"
+    "pnpm": "10.13.1"
   }
 }
