--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,4 +3,13 @@ packages:
   - tools/*
 onlyBuiltDependencies:
   - "@swc/core"
+  - "@tailwindcss/oxide"
+  - "core-js-pure"
+  - esbuild
   - nx
+  - "unrs-resolver"
+overrides:
+  "undici@>=6.0.0 <6.21.1": ">=6.21.1"
+  "path-to-regexp@<0.1.12": ">=0.1.12"
+  "koa@>=2.0.0 <2.15.4": ">=2.15.4"
+  "esbuild@<=0.24.2": ">=0.25.0"
