--- a/packages/shared-react/tsconfig.lib.json
+++ b/packages/shared-react/tsconfig.lib.json
@@ -1,15 +1,14 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
     "moduleResolution": "Node",
-    "jsx": "react-jsx",
-    "rootDir": "src"
+    "jsx": "react-jsx"
   },
-  "include": ["src/**/*"],
+  "include": ["src"],
   "exclude": [
     "node_modules",
     "dist",
