--- a/packages/perf-react/package.json
+++ b/packages/perf-react/package.json
@@ -29,8 +29,8 @@
     "@types/react-dom": "^18.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "shared": "link:../shared",
-    "shared-react": "link:../shared-react"
+    "shared": "workspace:~",
+    "shared-react": "workspace:~"
   },
   "volta": {
     "extends": "../../package.json"
