--- a/packages/perf-vanilla/package.json
+++ b/packages/perf-vanilla/package.json
@@ -14,7 +14,7 @@
     "open-patcher": "1.0.0-beta.1"
   },
   "devDependencies": {
-    "shared": "link:../shared"
+    "shared": "workspace:~"
   },
   "volta": {
     "extends": "../../package.json"
