--- a/packages/scribe/package.json
+++ b/packages/scribe/package.json
@@ -45,8 +45,8 @@
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "shared": "link:../shared",
-    "shared-react": "link:../shared-react",
+    "shared": "workspace:~",
+    "shared-react": "workspace:~",
     "sj-usfm-grammar": "^3.0.8",
     "tailwindcss": "^4.1.11"
   },
