--- a/packages/shared-react/tsconfig.json
+++ b/packages/shared-react/tsconfig.json
@@ -4,7 +4,7 @@
     "jsx": "react-jsx",
     "moduleResolution": "Node"
   },
-  "include": ["."],
+  "include": ["src"],
   "exclude": [
     "node_modules",
     "jest.config.ts"
