--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "moduleResolution": "Node"
   },
-  "include": ["."],
+  "include": ["src"],
   "exclude": ["node_modules", "jest.config.ts"]
 }
