--- a/packages/shared/tsconfig.lib.json
+++ b/packages/shared/tsconfig.lib.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
     "outDir": "dist",
     "declaration": true,
@@ -7,7 +7,7 @@
     "sourceMap": true,
     "moduleResolution": "Node"
   },
-  "include": ["src/**/*", "data/**/*"],
+  "include": ["src"],
   "exclude": [
     "node_modules",
     "dist",
