--- a/packages/shared/tsconfig.spec.json
+++ b/packages/shared/tsconfig.spec.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "types": ["jest", "node"]
