- nx way - utilities

--- a/packages/perf-vanilla/tsconfig.json
+++ b/packages/perf-vanilla/tsconfig.json
@@ -3,5 +3,10 @@
   "compilerOptions": {
     "moduleResolution": "Node"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [
+    {
+      "path": "../shared"
+    }
+  ]
 }
