--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@eten-tech-foundation/scripture-utilities": "workspace:~",
+    "@floating-ui/dom": "^1.7.3",
     "@lexical/react": "^0.33.1",
     "@lexical/selection": "^0.33.1",
     "@lexical/text": "^0.33.1",
