--- a/packages/platform/tsconfig.lib.json
+++ b/packages/platform/tsconfig.lib.json
@@ -44,6 +44,9 @@
   ],
   "references": [
     {
+      "path": "../shared-react/tsconfig.lib.json"
+    },
+    {
       "path": "../shared/tsconfig.lib.json"
     },
     {
