--- a/packages/scribe/tsconfig.json
+++ b/packages/scribe/tsconfig.json
@@ -3,16 +3,20 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "paths": {
-      "@eten-tech-foundation/scripture-utilities": ["utilities/src"],
-      "shared": ["shared/src"],
-      "shared/*": ["shared/src/*"],
-      "shared-react": ["shared-react/src"],
-      "shared-react/*": ["shared-react/src/*"],
       "@/*": ["scribe/src/*"]
     }
   },
   "include": ["src"],
   "references": [
+    {
+      "path": "../utilities"
+    },
+    {
+      "path": "../shared-react"
+    },
+    {
+      "path": "../shared"
+    },
     {
       "path": "./tsconfig.node.json"
     }
