--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,8 +3,9 @@
     "bierner.markdown-mermaid",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
-    "firsttris.vscode-jest-runner",
+    "dbaeumer.vscode-eslint",
     "nrwl.angular-console",
-    "streetsidesoftware.code-spell-checker"
+    "streetsidesoftware.code-spell-checker",
+    "vitest.explorer"
   ]
 }
