--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vitejs/plugin-react-swc": "^3.11.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.2.4",
+    "ajv": "^8.0.0",
     "axios": "^1.11.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.32.0",
