--- a/packages/perf-react/tsconfig.json
+++ b/packages/perf-react/tsconfig.json
@@ -7,6 +7,12 @@
   "include": ["src"],
   "references": [
     {
+      "path": "../shared-react"
+    },
+    {
+      "path": "../shared"
+    },
+    {
       "path": "./tsconfig.node.json"
     }
   ]
