--- a/packages/platform/tsconfig.json
+++ b/packages/platform/tsconfig.json
@@ -1,12 +1,22 @@
 {
-  "extends": "../../tsconfig.base",
-  "compilerOptions": {
-    "jsx": "react-jsx"
-  },
-  "include": ["src"],
+  "extends": "../../tsconfig.base.json",
+  "files": [],
+  "include": [],
   "references": [
     {
-      "path": "./tsconfig.node.json"
+      "path": "../shared-react"
+    },
+    {
+      "path": "../shared"
+    },
+    {
+      "path": "../utilities"
+    },
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
     }
   ]
 }
