--- a/packages/shared-react/tsconfig.json
+++ b/packages/shared-react/tsconfig.json
@@ -1,12 +1,19 @@
 {
-  "extends": "../../tsconfig.base",
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "moduleResolution": "Node"
-  },
-  "include": ["src"],
-  "exclude": [
-    "node_modules",
-    "jest.config.ts"
+  "extends": "../../tsconfig.base.json",
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "../shared"
+    },
+    {
+      "path": "../utilities"
+    },
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
   ]
 }
