--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -16,15 +16,17 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
+    "./package.json": "./package.json",
     ".": {
+      "development": "./src/index.ts",
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
     }
   },
   "files": [
     "dist",
-    "!dist/package.json",
     "src",
     "!src/**/*.test.ts",
     "!src/**/*.data.ts"
