- nx way - shared-react

--- a/packages/shared-react/tsconfig.lib.json
+++ b/packages/shared-react/tsconfig.lib.json
@@ -38,6 +38,7 @@
     "src/**/*.spec.js",
     "src/**/*.test.jsx",
     "src/**/*.spec.jsx",
+    "src/**/react-test.utils.tsx",
     "eslint.config.js",
     "eslint.config.cjs",
     "eslint.config.mjs"
