--- a/packages/shared-react/package.json
+++ b/packages/shared-react/package.json
@@ -1,26 +1,34 @@
 {
   "name": "shared-react",
-  "private": "true",
+  "version": "0.0.1",
+  "private": true,
+  "license": "MIT",
   "keywords": [
     "react",
     "lexical",
     "editor",
     "rich-text"
   ],
-  "license": "MIT",
-  "version": "0.0.1",
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "development": "./src/index.ts",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  },
   "files": [
     "dist",
-    "!dist/package.json",
     "src",
+    "!src/**/react-test.utils.tsx",
     "!src/**/*.test.ts",
-    "!src/**/*.test.tsx"
+    "!src/**/*.data.ts"
   ],
-  "scripts": {},
   "peerDependencies": {
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1"
@@ -32,13 +40,10 @@
     "@lexical/utils": "^0.33.1",
     "fast-equals": "^5.2.2",
     "lexical": "^0.33.1",
-    "quill-delta": "^5.1.0"
+    "quill-delta": "^5.1.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "shared": "workspace:~"
   },
   "repository": {
