- nx way - platform-editor

--- a/packages/platform/tsconfig.spec.json
+++ b/packages/platform/tsconfig.spec.json
@@ -32,6 +32,12 @@
   ],
   "references": [
     {
+      "path": "../shared"
+    },
+    {
+      "path": "../utilities"
+    },
+    {
       "path": "./tsconfig.lib.json"
     }
   ]
