--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -14,16 +14,24 @@
   "type": "module",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "development": "./src/index.ts",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  },
   "files": [
-    "dist/**/*",
-    "!dist/package.json",
+    "dist",
     "src/index.ts",
-    "src/editor"
+    "src/Editorial.tsx",
+    "src/editor",
+    "src/marginal"
   ],
   "scripts": {
     "dev": "vite",
-    "dev:test": "cross-env NODE_ENV=testing vite",
-    "files:smash": "cd scripts && python3 ./consolidate_files.py",
     "prepublish": "cd ../.. && nx build platform"
   },
   "peerDependencies": {
@@ -44,8 +52,6 @@
     "yjs": "^13.6.27"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
     "platform-bible-react": "file:./lib/platform-bible-react",
     "platform-bible-utils": "file:./lib/platform-bible-utils",
     "react": "^18.3.1",
