--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -1,67 +1,17 @@
 {
-  "name": "platform",
+  "name": "@eten-tech-foundation/platform-editor",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "{projectRoot}/src",
   "projectType": "library",
   "tags": [],
   "targets": {
-    "build": {
-      "executor": "@nx/vite:build",
-      "outputs": ["{options.outputPath}"],
-      "defaultConfiguration": "production",
-      "options": {
-        "outputPath": "{projectRoot}/dist"
-      },
-      "configurations": {
-        "development": {
-          "mode": "development"
-        },
-        "production": {
-          "mode": "production"
-        }
-      }
-    },
-    "serve": {
-      "executor": "@nx/vite:dev-server",
-      "defaultConfiguration": "development",
-      "options": {
-        "buildTarget": "platform:build"
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "platform:build:development",
-          "hmr": true
-        },
-        "production": {
-          "buildTarget": "platform:build:production",
-          "hmr": false
-        }
-      }
-    },
-    "preview": {
-      "executor": "@nx/vite:preview-server",
-      "defaultConfiguration": "development",
-      "options": {
-        "buildTarget": "platform:build"
-      },
-      "configurations": {
-        "development": {
-          "buildTarget": "platform:build:development"
-        },
-        "production": {
-          "buildTarget": "platform:build:production"
-        }
-      }
-    },
     "devpub": {
       "executor": "nx:run-commands",
-      "defaultConfiguration": "production",
+      "dependsOn": ["build"],
       "options": {
         "command": "yalc push",
         "cwd": "{projectRoot}"
       }
-    },
-    "test": {},
-    "lint": {}
+    }
   }
 }
