--- a/packages/perf-vanilla/package.json
+++ b/packages/perf-vanilla/package.json
@@ -3,15 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "dev": "vite"
   },
   "dependencies": {
     "@lexical/rich-text": "^0.33.1",
-    "@lexical/utils": "^0.33.1",
-    "lexical": "^0.33.1",
-    "open-patcher": "1.0.0-beta.1"
+    "lexical": "^0.33.1"
   },
   "devDependencies": {
     "shared": "workspace:~"
