--- a/packages/perf-react/tsconfig.json
+++ b/packages/perf-react/tsconfig.json
@@ -1,10 +1,7 @@
 {
-  "extends": "../../tsconfig.base",
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "moduleResolution": "Node"
-  },
-  "include": ["src"],
+  "extends": "../../tsconfig.base.json",
+  "files": [],
+  "include": [],
   "references": [
     {
       "path": "../shared-react"
@@ -13,7 +10,10 @@
       "path": "../shared"
     },
     {
-      "path": "./tsconfig.node.json"
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
     }
   ]
 }
