- nx way - scribe-editor

--- a/packages/scribe/package.json
+++ b/packages/scribe/package.json
@@ -14,9 +14,17 @@
   "type": "module",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "development": "./src/index.ts",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  },
   "files": [
     "dist/**/*",
-    "!dist/package.json",
     "src/index.ts",
     "src/editor"
   ],
@@ -40,8 +48,6 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
