--- a/packages/scribe/tsconfig.json
+++ b/packages/scribe/tsconfig.json
@@ -1,16 +1,8 @@
 {
-  "extends": "../../tsconfig.base",
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "paths": {
-      "@/*": ["scribe/src/*"]
-    }
-  },
-  "include": ["src"],
+  "extends": "../../tsconfig.base.json",
+  "files": [],
+  "include": [],
   "references": [
-    {
-      "path": "../utilities"
-    },
     {
       "path": "../shared-react"
     },
@@ -18,7 +10,13 @@
       "path": "../shared"
     },
     {
-      "path": "./tsconfig.node.json"
+      "path": "../utilities"
+    },
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
     }
   ]
 }
