- nx way - usfm-markers & cleanup
- fix CodeQL [alert #19](https://github.com/eten-tech-foundation/scripture-editors/security/code-scanning/19)
- ignore PBR and PBU libraries included only for testing.

--- a/tools/usfm-markers/src/generators/markers-data/files/src/usfmMarkers.ts.template
+++ b/tools/usfm-markers/src/generators/markers-data/files/src/usfmMarkers.ts.template
@@ -1,6 +1,6 @@
 /** Generated file using `nx generate markers-data` with '<%- usfmStyleUrl %>' */
 
-import { CategoryType, MarkerType, Marker } from './usfmTypes';
+import { CategoryType, MarkerType, Marker } from './usfmTypes.js';
 
 export const usfmMarkers: Record<string, Marker> = {
 <%- simplifiedDictionaryString %>
