--- a/tools/usfm-markers/tsconfig.json
+++ b/tools/usfm-markers/tsconfig.json
@@ -1,8 +1,5 @@
 {
-  "extends": "../../tsconfig.base",
-  "compilerOptions": {
-    "module": "preserve"
-  },
+  "extends": "../../tsconfig.base.json",
   "files": [],
   "include": [],
   "references": [
