--- a/tools/usfm-markers/package.json
+++ b/tools/usfm-markers/package.json
@@ -1,15 +1,25 @@
 {
   "name": "usfm-markers",
   "version": "0.0.1",
-  "devDependencies": {
+  "private": true,
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "development": "./src/index.ts",
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  },
+  "generators": "./generators.json",
+  "dependencies": {
     "@nx/devkit": "21.3.11",
+    "axios": "^1.11.0",
     "tslib": "^2.8.1"
   },
-  "type": "commonjs",
-  "main": "./src/index.js",
-  "typings": "./src/index.d.ts",
-  "private": true,
-  "generators": "./generators.json",
   "volta": {
     "extends": "../../package.json"
   }
