--- a/demos/perf-vanilla/tsconfig.app.json
+++ b/demos/perf-vanilla/tsconfig.app.json
@@ -30,7 +30,7 @@
   ],
   "references": [
     {
-      "path": "../shared/tsconfig.lib.json"
+      "path": "../../packages/shared/tsconfig.lib.json"
     }
   ]
 }
