--- a/demos/perf-vanilla/tsconfig.json
+++ b/demos/perf-vanilla/tsconfig.json
@@ -4,10 +4,7 @@
   "include": [],
   "references": [
     {
-      "path": "../shared-react"
-    },
-    {
-      "path": "../shared"
+      "path": "../../packages/shared"
     },
     {
       "path": "./tsconfig.app.json"
