platform: set up `api-extractor`

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -29,7 +29,7 @@
     "!src/**/*.test.tsx"
   ],
   "scripts": {
-    "prepublish": "cd ../.. && nx build platform-editor"
+    "prepublish": "cd ../.. && nx extract-api platform-editor"
   },
   "peerDependencies": {
     "react": ">=18.3.1",
