--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.34.0",
     "@lexical/eslint-plugin": "^0.34.0",
+    "@microsoft/api-extractor": "^7.52.10",
     "@nx/eslint": "21.4.1",
     "@nx/eslint-plugin": "21.4.1",
     "@nx/js": "21.4.1",
